# mcpgoogle

./: .dockerignore  .env.docker  .env.example  DOCKER_DEPLOYMENT.md  Dockerfile  INTEGRATION.md  MIGRATION_SUMMARY.md  MULTI_USER_ARCHITECTURE.md  Makefile  README.md  docker-compose.multi-user.yml  docker-entrypoint.sh  hello.py  pyproject.toml
docs/: ARCHITECTURE_DIAGRAMS.md  MCP_GUIDE.md  NEXTJS_INTEGRATION.md
examples/: oma_backend_example.py
specs/: gmail.googleapis.com.json
src/: config.py  core.py  server.py
src/auth/: google_auth.py  oma_client.py
src/middleware/: mcplogging.py
src/tools/: calendar_tool.py  gmail_tool.py
tests/test_mcp/: __init__.py  test_mcp_endpoints.py
